GNOME Bugzilla – Bug 775846
gdk/wayland: Add support for the gtk-enable-primary-paste gsetting
Last modified: 2017-01-10 14:20:46 UTC
.
Created attachment 341626 [details] [review] gdk/wayland: Add support for the gtk-enable-primary-paste gsetting The gsetting was recently added so that we can have this configurable on the wayland backend too.
Review of attachment 341626 [details] [review]: sure, looks good
Created attachment 343170 [details] [review] gdk/wayland: Handle non-existant gsettings keys Since we're a library, crashing on gsettings keys, whose presence is out of our control, isn't appropriate. -- I was going to push but realized that unlike other modules, I don't think gtk+ (particularly the 3-22 branch) can depend on a new enough gsettings-desktop-schemas, so I think we'll need something like this patch too.
Review of attachment 343170 [details] [review]: ok
eece8a7..99abc63 gtk-3-22 -> gtk-3-22 57a11ca..ae61220 master -> master Attachment 341626 [details] pushed as b46da27 - gdk/wayland: Add support for the gtk-enable-primary-paste gsetting Attachment 343170 [details] pushed as ae61220 - gdk/wayland: Handle non-existant gsettings keys Slightly changed this one to use the translation entry's fallback value instead of making gdk_screen_get_setting() fail for these cases.