gdk/wayland: Add support for the gtk-enable-primary-paste gsetting

The gsetting was recently added so that we can have this configurable
on the wayland backend too.

https://bugzilla.gnome.org/show_bug.cgi?id=775846